--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,5 +14,5 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[heka::default]
+      - recipe[hekad::default]
     attributes:
