--- a/files/default/hekad.conf
+++ b/files/default/hekad.conf
@@ -2,7 +2,7 @@
 #
 # Open Source Stream Processing Software System
 
-description	"Mozilla Heka"
+description "Heka is a high performance general purpose data acquisition and processing engine."
 
 start on filesystem or runlevel [2345]
 stop on runlevel [!2345]
