add docs link to service unit

--- a/files/default/hekad.service
+++ b/files/default/hekad.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Heka is a high performance general purpose data acquisition and processing engine.
+Documentation=http://hekad.readthedocs.org/
 
 [Service]
 ExecStart=/usr/bin/hekad -config=/etc/heka
