--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,7 +8,7 @@ provisioner:
 platforms:
   - name: ubuntu-12.04
   - name: ubuntu-14.04
-  - name: centos-6.5
+  - name: centos-6.6
   - name: centos-7.0
   - name: fedora-21
 
@@ -16,3 +16,4 @@ suites:
   - name: hekad
     run_list:
       - recipe[hekad]
+      - recipe[setup]
