tweak how service is handled

--- a/files/default/hekad.service
+++ b/files/default/hekad.service
@@ -3,6 +3,8 @@ Description=Heka is a high performance general purpose data acquisition and proc
 Documentation=http://hekad.readthedocs.org/
 
 [Service]
+User=heka
+Group=heka
 ExecStart=/usr/bin/hekad -config=/etc/heka
 Restart=on-failure
 
