--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -10,6 +10,7 @@ platforms:
   - name: ubuntu-14.04
   - name: centos-6.6
   - name: centos-7.0
+  - name: debian-8.1
   - name: fedora-21
 
 suites:
