update to support install with latest heka release

--- a/files/default/hekad.service
+++ b/files/default/hekad.service
@@ -5,7 +5,7 @@ Documentation=http://hekad.readthedocs.org/
 [Service]
 User=heka
 Group=heka
-ExecStart=/usr/bin/hekad -config=/etc/heka
+ExecStart=/usr/bin/hekad -config=/etc/heka.d
 Restart=on-failure
 
 [Install]
