--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -9,11 +9,12 @@ platforms:
   - name: ubuntu-12.04
   - name: ubuntu-14.04
   - name: centos-6.7
-  - name: centos-7.1
-  - name: debian-8.1
-  - name: fedora-22
+  - name: centos-7.2
+  - name: debian-8.2
+  - name: fedora-23
 
 suites:
   - name: hekad
     run_list:
       - recipe[hekad]
+      - recipe[setup]
