--- a/templates/default/hekad.conf
+++ b/templates/default/hekad.conf
@@ -10,4 +10,4 @@ stop on runlevel [!2345]
 respawn
 respawn limit 10 5
 
-exec sudo -u heka /usr/bin/hekad -config=<%= @conf_dir %>
+exec sudo -u <%= @user %> /usr/bin/hekad -config=<%= @conf_dir %>
