--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,9 +6,10 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: debian-8.2
+  - name: debian-8.4
   - name: ubuntu-12.04
   - name: ubuntu-14.04
+  - name: ubuntu-16.04
   - name: centos-6.7
   - name: centos-7.2
   - name: osx-10.10
